src/test/input/codegen/fail/main.c
// C program without main

int a() {
    return 5;
}